# news-impact-skill

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md
docs/superpowers/specs/: 2026-06-23-news-impact-skill-design.md
skills/news-impact/: SKILL.md  config.example.yaml
skills/news-impact/references/: sources.md  symbol-aliases.md
skills/news-impact/scripts/: cache.py  config.py  dedupe.py  models.py  pipeline.py  prefilter.py  rank.py
skills/news-impact/scripts/ranker/: anthropic.py  base.py  ollama.py  openai_compat.py
skills/news-impact/scripts/sources/: __init__.py  base.py  stubs.py  yahoo.py
tests/: test_cache.py  test_cli.py  test_config.py  test_dedupe.py  test_model_resolution.py  test_models.py  test_pipeline.py  test_prefilter.py  test_ranker_anthropic.py  test_ranker_base.py  test_ranker_openai.py  test_scaffold.py  test_skill_assets.py  test_sources_base.py  test_yahoo.py
tests/fixtures/: yahoo_eurusd.xml
