[project]
name = "news-impact-skill"
version = "0.1.0"
description = "Watchlist-scoped financial news briefing CLI"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "httpx>=0.27",
    "rapidfuzz>=3.6",
    "anthropic>=0.39",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.pytest.ini_options]
pythonpath = ["skills/news-impact/scripts"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
